--- a/BreezingHealth/res/xml/data_change.xml
+++ b/BreezingHealth/res/xml/data_change.xml
@@ -11,8 +11,8 @@
   
     <data
         breezing:name="settings"
-        breezing:type="insert"
-        breezing:version="4.0"
+        breezing:type="update"
+        breezing:version="5.0"
         breezing:object="com.breezing.health.transation.UnitSettingsInserter"/>
     
     <data
