add update breezing test function

--- a/BreezingHealth/res/layout/activity_breezing_test.xml
+++ b/BreezingHealth/res/layout/activity_breezing_test.xml
@@ -11,7 +11,39 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        layout="@layout/step_header" />
+        layout="@layout/step_header"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        android:id="@+id/last_test_result"
+        android:visibility="gone" >
+
+        <TextView
+            android:id="@+id/energyResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:gravity="center_vertical"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/small_textsize" />
+
+        <include
+            android:id="@+id/energy_vane"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_small_margin"
+            layout="@layout/vane_layout" />
+        
+    </LinearLayout>
 
     <com.breezing.health.widget.CustomViewPager
         android:id="@+id/viewPager"
