--- a/BreezingHealth/res/layout/activity_weight_record.xml
+++ b/BreezingHealth/res/layout/activity_weight_record.xml
@@ -66,11 +66,11 @@
         android:layout_below="@+id/seekbar_layout"
         android:layout_alignParentRight="true"
         android:background="@drawable/bg_up_forward_box" />
-
+    
     <RelativeLayout android:id="@+id/weight_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/information_cell_height"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="50dp"   
         android:layout_below="@+id/different_value" >
 
         <EditText
@@ -96,12 +96,43 @@
             android:text="@string/textview_title_unit" />
     </RelativeLayout>
     
+    <RelativeLayout android:id="@+id/expected_weight_layout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/information_cell_height"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/weight_layout" >
+
+        <EditText
+            android:id="@+id/expected_weight"
+            style="@style/EditTextStyle"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn_spinner_selector"
+            android:hint="@string/click_to_select_expected_weight"
+            android:singleLine="true" />
+
+        <TextView
+            android:id="@+id/expected_weight_unit"
+            style="@style/TitleTextViewStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/btn_spinner_selector"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:singleLine="true"
+            android:text="@string/textview_title_unit" />
+    </RelativeLayout>
+    
+    
+    
     <Button
         android:id="@+id/record"
         style="@style/ButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/weight_layout"
+        android:layout_below="@+id/expected_weight_layout"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@drawable/btn_red_round_selector"
         android:singleLine="true"
