--- a/BreezingHealth/res/layout/left_menu_header.xml
+++ b/BreezingHealth/res/layout/left_menu_header.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_vertical_margin" >
+    android:padding="@dimen/activity_vertical_margin" 
+    android:orientation ="horizontal" >"
 
     <ImageView
         android:id="@+id/icon"
@@ -16,7 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_gravity="center_vertical"
         android:orientation="vertical" >
 
         <TextView
@@ -27,17 +27,16 @@
             android:singleLine="true"
             android:textColor="@color/white"
             android:textSize="@dimen/large_textsize" />
-        
+
         <TextView
-            android:id="@+id/sex"
+            android:id="@+id/caloric"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_small_margin"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/middle_textsize"
-            android:layout_marginTop="@dimen/activity_vertical_small_margin" />
-        
+            android:textSize="@dimen/middle_textsize" />
     </LinearLayout>
 
 </LinearLayout>
