--- a/BreezingHealth/res/values/arrays.xml
+++ b/BreezingHealth/res/values/arrays.xml
@@ -18,7 +18,12 @@
         <item>里</item>
         <item>英里</item>
     </string-array>
-
+    
+    <string-array name = "caloric_unit" >
+        <item >千卡</item>
+        <item >千焦</item>
+    </string-array>
+    
     <string-array name="jobTypes">
         <item>久坐</item>
         <item>轻度运动</item>
