--- a/BreezingHealth/res/layout/page_of_caloric_intake_history.xml
+++ b/BreezingHealth/res/layout/page_of_caloric_intake_history.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp" >
+    android:paddingTop="@dimen/activity_horizontal_small_margin"
+    android:paddingBottom="@dimen/activity_horizontal_small_margin" >
 
     <com.breezing.health.widget.linechart.FancyChart
         android:id="@+id/chart"
