修改bug关于 千卡和千焦

--- a/BreezingHealth/res/layout/fragment_caloric_burn.xml
+++ b/BreezingHealth/res/layout/fragment_caloric_burn.xml
@@ -39,6 +39,7 @@
                 android:gravity="center" />
 
             <TextView
+                android:id = "@+id/metabolism"
                 style="@style/TitleTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
