--- a/BreezingHealth/res/layout/fragment_breezing_test_result.xml
+++ b/BreezingHealth/res/layout/fragment_breezing_test_result.xml
@@ -17,11 +17,13 @@
     
     <include
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/result"
         android:layout_marginTop="30dp"
         layout="@layout/vane_layout"
-        android:id="@+id/total_vane" />
+        android:id="@+id/total_vane"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:layout_height="@dimen/vane_height" />
 
     <TextView
         android:id="@+id/balance"
