--- a/BreezingHealth/res/layout/vane_layout.xml
+++ b/BreezingHealth/res/layout/vane_layout.xml
@@ -1,51 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/vane"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/result"
-    android:layout_marginTop="30dp" >
-
-    <ImageView
-        android:id="@+id/begin"
-        android:layout_width="match_parent"
+    android:background="@drawable/bg_vane" >
+    
+    <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/content_description"
-        android:singleLine="true"
-        android:src="@drawable/bg_vane" />
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:visibility="gone"
+        android:id="@+id/number_fifth_layout" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/number_fifth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:src="@drawable/number0" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:scaleType="fitXY"
+            android:src="@drawable/divider_breezing_test" />
+    </RelativeLayout>
+    
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:paddingBottom="10dp" >
+        android:layout_gravity="center_vertical"
+        android:id="@+id/ring_fifth_layout"
+        android:visibility="gone" >
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
-
-            <ImageView
-                android:id="@+id/number_first"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/number0" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:scaleType="fitXY"
-                android:src="@drawable/divider_breezing_test" />
-        </RelativeLayout>
-
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/content_description"
+            android:singleLine="true"
+            android:src="@drawable/vane_divider"
+            android:layout_centerInParent="true" />
+        
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,31 +57,51 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/content_description"
             android:singleLine="true"
-            android:src="@drawable/ic_ring" />
+            android:src="@drawable/ic_ring"
+            android:layout_centerInParent="true" />
+        
+    </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="0dp"
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1" >
+
+        <ImageView
+            android:id="@+id/number_first"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:src="@drawable/number0" />
 
-            <ImageView
-                android:id="@+id/number_second"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/number0" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:scaleType="fitXY"
+            android:src="@drawable/divider_breezing_test" />
+    </RelativeLayout>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:scaleType="fitXY"
-                android:src="@drawable/divider_breezing_test" />
-        </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" >
 
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/content_description"
+            android:singleLine="true"
+            android:src="@drawable/vane_divider"
+            android:layout_centerInParent="true" />
+        
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -85,31 +109,51 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/content_description"
             android:singleLine="true"
-            android:src="@drawable/ic_ring" />
+            android:src="@drawable/ic_ring"
+            android:layout_centerInParent="true" />
+        
+    </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="0dp"
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1" >
+
+        <ImageView
+            android:id="@+id/number_second"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:src="@drawable/number0" />
 
-            <ImageView
-                android:id="@+id/number_third"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/number0" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:scaleType="fitXY"
+            android:src="@drawable/divider_breezing_test" />
+    </RelativeLayout>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:scaleType="fitXY"
-                android:src="@drawable/divider_breezing_test" />
-        </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" >
 
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/content_description"
+            android:singleLine="true"
+            android:src="@drawable/vane_divider"
+            android:layout_centerInParent="true" />
+        
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -117,30 +161,85 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/content_description"
             android:singleLine="true"
-            android:src="@drawable/ic_ring" />
+            android:src="@drawable/ic_ring"
+            android:layout_centerInParent="true" />
+        
+    </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="0dp"
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1" >
+
+        <ImageView
+            android:id="@+id/number_third"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:src="@drawable/number0" />
 
-            <ImageView
-                android:id="@+id/number_forth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:src="@drawable/number0" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:scaleType="fitXY"
+            android:src="@drawable/divider_breezing_test" />
+    </RelativeLayout>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/content_description"
-                android:scaleType="fitXY"
-                android:src="@drawable/divider_breezing_test" />
-        </RelativeLayout>
-    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" >
 
-</RelativeLayout>
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/content_description"
+            android:singleLine="true"
+            android:src="@drawable/vane_divider"
+            android:layout_centerInParent="true" />
+        
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:singleLine="true"
+            android:src="@drawable/ic_ring"
+            android:layout_centerInParent="true" />
+        
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1" >
+
+        <ImageView
+            android:id="@+id/number_forth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:src="@drawable/number0" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/content_description"
+            android:scaleType="fitXY"
+            android:src="@drawable/divider_breezing_test" />
+    </RelativeLayout>
+    
+</LinearLayout>
