--- a/BreezingHealth/res/layout/fragment_dialog_food_intake.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_food_intake.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dialog_actionbar_height"
         android:layout_above="@+id/list"
         android:background="@drawable/bg_action_bar"
         android:padding="@dimen/activity_horizontal_small_margin" >
