--- a/BreezingHealth/res/layout/fragment_dialog_image_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_image_picker.xml
@@ -42,7 +42,7 @@
 
     <include
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dialog_actionbar_height"
         android:layout_above="@+id/fragmentContainer"
         layout="@layout/fragment_dialog_picker_actionbar" />
 
