--- a/BreezingHealth/res/layout/fragment_dialog_month_interval_picker.xml
+++ b/BreezingHealth/res/layout/fragment_dialog_month_interval_picker.xml
@@ -64,7 +64,7 @@
 
     <include
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dialog_actionbar_height"
         android:layout_above="@+id/fragment_container"
         layout="@layout/fragment_dialog_picker_actionbar" />
 
