--- a/BreezingHealth/res/layout/page_of_caloric_balance_history.xml
+++ b/BreezingHealth/res/layout/page_of_caloric_balance_history.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:paddingTop="@dimen/activity_horizontal_small_margin"
+    android:paddingBottom="@dimen/activity_horizontal_small_margin" >
 
+    <com.breezing.health.widget.BarChart
+            android:id="@+id/bar_chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 </LinearLayout>
