--- a/BreezingHealth/res/values/colors.xml
+++ b/BreezingHealth/res/values/colors.xml
@@ -47,5 +47,6 @@
     <color name="bg_food_catagory_color">#f6f6f6</color>
     
     <color name="blue">#0800ff</color>
+    <color name="divider_color">#cec9c9</color>
     
 </resources>
